[tool.poetry]
name = "ooouno"
version = "3.0.0"
description = "Interfaces and classes for LibreOffice (uno)"
authors = [":Barry-Thomas-Paul: Moss <vibrationoflife@protonmail.com>"]
license = "Apache Software License"
readme = "README.rst"
homepage = "https://github.com/Amourspirit/python-ooouno"
documentation = "https://github.com/Amourspirit/python-ooouno"
repository = "https://github.com/Amourspirit/python-ooouno"
packages = [
    { include = "ooo" }
]
classifiers = [
    "Topic :: Office/Business",
    "Environment :: Other Environment",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Office/Business",
    "Typing :: Typed",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[[tool.poetry.source]]
name = "pypi-test"
url = "https://test.pypi.org/legacy/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.8"
types-unopy = ">=1.2.3"
typing-extensions = "^4.12"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1"
black = {extras = ["d"], version = ">=24.8"}
oooenv = ">=0.2.4"
unotools = ">=0.3.3"
kwargshelper = ">=2.7.1"
stickytape = "^0.2.1"


[tool.poetry.group.docs.dependencies]
sphinx = "5.3.0"
esbonio = "^0.16.1"
sphinx-rtd-dark-mode = "^1.2.4"
sphinxcontrib-globalsubs = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extended-select=["ANN", "C4", "N", "SIM", "TCH"]
ignore=["E502"]
show-fixes=true
target="py38"